Found the issue: Carousel was being messed up when used on mobile.

--- a/style.scss
+++ b/style.scss
@@ -20,9 +20,6 @@ html, body {
 
 .container {
     counter-reset: heading-counter;
-    display:flex;
-    flex-direction: column;
-    align-items:center;
 }
 
 .card {
@@ -112,8 +109,15 @@ ul {
     text-decoration: underline;
 }
 
+.carousel {
+    display: flex;
+    justify-content: center;
+}
+
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
+    position: absolute;
+    top: 50%;
     background-color: $comp-green;
     width: 40px;
     height: 40px;
